@startuml
hide circle
skinparam linetype ortho

entity "User" as user {
  * id : int <<PK>>
  --
  * username : varchar
  * role : varchar
}

entity "Project" as project {
  * id : int <<PK>>
  --
  * name : varchar
  * description : text
}

entity "Task" as task {
  * id : int <<PK>>
  --
  * title : varchar
  * status : varchar
  project_id : int <<FK>>
  assigned_user_id : int <<FK>>
}

project ||--o{ task : "contains"
user ||--o{ task : "assigned to"

@enduml
